@@ -1,6 +1,7 @@
 Revision history for Set::Similarity::CosinePP
 
 {{$NEXT}}
+       - improved travis config, badges
 
 0.012  2014-10-19 22:32:00 CEST
        - naming internal methods
